# unified_careflow

./: .gitignore
App-Hub/: check-configs.ts  debug-columns.ts  (+8 more)
CareSet/: app.py  inspect_remote_db.py  pyproject.toml  run_migration.py  run_seed.py
CareSet/.local/state/replit/: log-query.db-shm  log-query.db-wal
CareSet/.local/state/scribe/: scribe.db-shm  scribe.db-wal
CareSet/.local/state/workflow-logs/4jyN_DdXmlbvqmMwsvksy/: metadata.json
CareSet/.local/state/workflow-logs/B9Li-5hCSOH1PX_Bmwmiz/: metadata.json  start_application.shell.exec.0
CareSet/.local/state/workflow-logs/CmCp4ci5Hq-jJN36ad37h/: metadata.json
CareSet/.local/state/workflow-logs/DAYn4HYBLlZ98BEZVlv6Y/: metadata.json
CareSet/.local/state/workflow-logs/EPvC2PUt9-kclVy_Ew_u3/: metadata.json
CareSet/.local/state/workflow-logs/Ekr6zAvR1gAVhp_30cXKC/: metadata.json
CareSet/.local/state/workflow-logs/FPPy9vFl_ShX8ZRaif2HF/: metadata.json  start_application.shell.exec.0
CareSet/attached_assets/: Screen_Recording_2025-12-08_at_18.43.48_1765215922300.mov  drgr.Groundfloor.5fbf59be54584cbdfcd10833768510fb79811e65_1764670684857.geojson
CareSet/database/: __init__.py  models.py
CareSet/utils/: __init__.py  auth.py  dwg_parser.py  geojson_renderer.py  mqtt_handler.py  mqtt_publisher.py  signal_processor.py  translations.py  triangulation.py
CareSet/views/: alert_zones.py  beacons.py  buildings.py  dashboard.py  gateway_planning.py  gateways.py  import_export.py  live_tracking.py  login.py  mqtt_config.py  signal_diagnostics.py  signal_monitor.py  user_management.py  zones_alerts.py
(+96 files in other folders)
